--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ font-size: 40px;
 #div1{
     width: 100%;
     height: 800px;
-    background-image: url(images/c-dustin-91AQt9p4Mo8-unsplash.jpg);
+    background-image: url(images/fixed\ img.jpg);
     background-size: cover;
     background-position: center;
     
